# msys2-updater

./: .gitignore  .gitmodules  README.md  constants.py  pyproject.toml  requirements.txt  update.py
.github/: dependabot.yml
.github/workflows/: update.yml
updater/: __init__.py  __main__.py  constants.py  logger.py  utils.py
updater/handlers/: github.py  gitlab.py  handler.py  pypi.py
updator/: __init__.py  __main__.py  constants.py  github.py  handler.py  logger.py  utils.py  writer.py
updator/handlers/: github.py  gitlab.py  handler.py  pypi.py
utils/: check_push.py  commit_message.py  create_json.py  pynamemappinggen.py
