[tool.poetry]
name = "msys2-updater"
version = "0.1.0"
description = "Update packages in msys2 repos."
authors = ["Naveen M K <naveen521kk@gmail.com>"]
license = "MIT"
packages = [
    { include = "updater" },
]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
python-gitlab = "^3.1"
requests="^2.27"
rich = "^11.0.0"
packaging = "^21.3"
GitPython = "^3.1.26"
johnnydep = "^1.10"
pipgrip = "^0.6"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
