[tool.poetry]
name = "msys2-updater"
version = "0.1.0"
description = "Update packages in msys2 repos."
authors = ["Naveen M K <naveen521kk@gmail.com>"]
license = "MIT"
packages = [
    { include = "updater" },
]

[tool.poetry.dependencies]
python = "^3.9"
PyGithub = "^1.55"
python-gitlab = "^3.3"
requests="^2.27"
rich = "^12.4.4"
packaging = "^21.3"
GitPython = "^3.1.27"
johnnydep = "^1.13"
pipgrip = "^0.7"

[tool.poetry.dev-dependencies]
black = {version = "^22.3", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
